--- a/assets/views/pages/quisommesnous.html
+++ b/assets/views/pages/quisommesnous.html
@@ -1,10 +1,9 @@
 <div class="my-2 py-2">
     <h1>Qui sommes nous ?</h1>
-    <div class="columns col-10 m-auto">
-        <div class="column col-mx-auto my-auto col-md-auto col-sm-auto"><img src="assets/images/aucune-image.png"></div>
-        <div class="divider-vert"></div>
-        <div class="column col-mx-auto col-md-auto col-sm-auto">
-            <div class="h4 pb-2">Un groupe fondé il y a 25 ans..</div>
+    <div class="columns col-10  col-md-auto col-mx-auto">
+        <div class="column col-mx-auto col-md-auto "><img src="assets/images/aucune-image.png"></div>
+        <div class="column col-mx-auto col-md-auto ">
+            <div class="h4 py-2">Un groupe fondé il y a 25 ans..</div>
             <div class="py-2">Fondée en 1994, L’entreprise COPROMETAL SA équipe, protège et occulte vos propriétés
                 à travers
                 notre gamme de clôtures et kits d’occultation.
