--- a/assets/views/parts/cartModal.html
+++ b/assets/views/parts/cartModal.html
@@ -2,7 +2,7 @@
     <table class="table">
         <thead>
         <tr>
-            <th class="refLabel">Reference</th>
+<!--            <th class="refLabel">Reference</th>-->
             <th>Produit</th>
             <th class="priceLabel text-center" >Prix à l'unité TTC</th>
             <th>Quantité</th>
