--- a/assets/views/parts/cartRow.html
+++ b/assets/views/parts/cartRow.html
@@ -1,7 +1,10 @@
 <table>
     <tr>
-        <td class="refLabel" data-label="Ref"><div class="value"></div></td>
-        <td class="productLabel" data-label="Produit"><div class="value"></div></td>
+<!--        <td class="refLabel" data-label="Ref"><div class="value"></div></td>-->
+        <td class="productLabel" data-label="Produit">
+            <div class="value"></div>
+            <div class="refLabel" data-label="Ref"><small class="value" hidden></small></div>
+        </td>
         <td class="priceLabel text-center" data-label="Prix à l'unité"><span class="value"></span></td>
         <td class="qtyLabel" data-label="Quantité">
         <span class="iconPointer minusProduct">
