--- a/assets/views/parts/footer.html
+++ b/assets/views/parts/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="col-8 col-sm-12 col-md-12 footer mt-1 m-auto">
         <div class="columns">
-            <div class="column  col-4  col-md-auto col-sm-12 col-mx-auto">
+            <div class="column  col-4  col-md-4 col-sm-12 col-mx-auto">
                 <div class="h3">Nous contacter</div>
                 <ul class="unstyled mt-4">
                     <li class="mt-2 mb-2 text-left">
@@ -26,7 +26,7 @@
                 </ul>
 
             </div>
-            <div class="column col-auto">
+            <div class="column col-auto col-md-4 col-sm-12">
                 <div class="h3">Liens utiles</div>
 
                 <ul class="unstyled mt-2 text-left">
@@ -42,7 +42,7 @@
 
 
             </div>
-            <div class="column col-4 col-md-auto col-sm-12 col-mx-auto">
+            <div class="column col-4 col-md-4  col-sm-12 col-mx-auto">
                 <div class="h3">Découvrez notre autre site</div>
 
                 <ul class="unstyled mt-2">
