--- a/assets/views/pages/contact.html
+++ b/assets/views/pages/contact.html
@@ -7,18 +7,18 @@
     <div class="col-10 col-md-12 p-centered">
         <form id="contact">
             <div class="col-12 m-auto columns">
-                <div class="col-6 column border col-md-12 col-sm-12">
+                <div class="col-6 column col-md-12 ">
                     <div id="mapid"></div>
                 </div>
-                <div class=" col-6  col-md-12 col-sm-12 m-auto column">
+                <div class=" col-6  col-md-12 m-auto column">
 
                     <div class="pb-2 pt-2 "><input class="form-input col-12" type="email" id="mail"
                                                    placeholder="Votre adresse Email"></div>
-                    <div class="pb-2 pt-2 "><input class="form-input pb-2 pt-2 col-12" type="text" id="nom"
+                    <div class="pb-2 pt-2 "><input class="form-input py-2 col-12" type="text" id="nom"
                                                    placeholder="Votre nom"></div>
-                    <div class="pb-2 pt-2 "><input class="form-input pb-2 pt-2 col-12" type="telephone" id="telephone"
+                    <div class="pb-2 pt-2 "><input class="form-input py-2 col-12" type="telephone" id="telephone"
                                                    placeholder="Votre n° de téléphone"></div>
-                    <div class="pb-2 pt-2 "><textarea class="form-input textarea col-12 pb-2 pt-2 " id="message"
+                    <div class="pb-2 pt-2 "><textarea class="form-input textarea col-12 py-2 " id="message"
                                                       placeholder="Ecrivez votre message ici" rows="8"></textarea>
                     </div>
                 </div>
@@ -26,11 +26,11 @@
             <div class="divider mt-2 mb-2 pt-2 "></div>
 
             <div class="columns col-12">
-                <div class="btn-moreinfo mb-2 pb-2 column col-2 col-ml-auto col-sm-6 col-md-6" id="btnadd">
-                    <svg class="feather ml-2 mr-1">
+                <div class="btn-moreinfo mt-2 pt-2 col-5 col-ml-auto col-sm-6" id="btnenvyer">
+                    <svg class="feather ">
                         <use xlink:href="assets/images/feather-sprite.svg#send"/>
                     </svg>
-                    <span class="ml-2 mr-2">Envoyer</span></div>
+                    <span class="mx-2">Envoyer</span></div>
             </div>
         </form>
     </div>
