--- a/assets/views/pages/detail.html
+++ b/assets/views/pages/detail.html
@@ -3,7 +3,7 @@
         <div class="columns">
             <div class="column mb-2">
                 <h1>Nos articles<sup><img class="pr-2 mr-2"src="assets/images/pastillenoir.png" alt="" style="width: 45px;"></sup></h1>
-                <div class="desc">Retrouvez l'intégralité de nos produits au détail...</div>
+                <div class="h5">Retrouvez l'intégralité de nos produits au détail...</div>
             </div>
         </div>
     </div>
