--- a/assets/views/pages/nos_clotures.html
+++ b/assets/views/pages/nos_clotures.html
@@ -1,56 +1,62 @@
-<div class="productsCategory">
+<div>
     <div class="my-2 py-2">
         <div>
             <div class="mb-2">
                 <h1>Nos kits de clôtures<sup><img class="pr-2 mr-2" src="assets/images/pastillenoir.png" alt=""
                                                   style="width: 45px;"></sup></h1>
-                <div class="desc">Découvrez notre configurateur en ligne...</div>
+                <div class="h5">Découvrez notre configurateur de clôture en kit</div>
             </div>
         </div>
     </div>
 
 
-    <div class="columns col-12 col-md-12 col-sm-12 m-auto p-2 justify-around">
+    <div class="columns col-12 m-auto p-2 justify-around">
 
 
-        <a href="#config-persienne" class="col-3 col-md-5 col-sm-12 m-2 p-3 linkclot my-card">
+        <a href="#config-persienne" class="col-3 col-md-5 col-sm-12 m-2 linkclot my-card">
             <div class="h2 productName">Lame persienne</div>
             <div class="h4 productPrice mb-2"><small>A partir de</small> 57.40 €</div>
             <img src="assets/images/cloture-aluminium-lame-persienne.png"
-                 class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
+                 class=" w-100 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
 
-            <div class="m-auto btn-moreinfo col-7">
-                <svg class="feather mr-1">
-                    <use xlink:href="assets/images/feather-sprite.svg#file-plus"/>
-                </svg>
-                En savoir plus
+            <div class="columns col-12">
+                <div class="m-auto btn-moreinfo col-auto">
+                    <svg class="feather mr-1">
+                        <use xlink:href="assets/images/feather-sprite.svg#file-plus"/>
+                    </svg>
+                    En savoir plus
+                </div>
             </div>
 
         </a>
-<!--        <div class="divider-vert"></div>-->
-        <a href="#config-lame-large" class="col-3 col-md-5 col-sm-12 m-2 p-3 linkclot my-card">
+        <!--        <div class="divider-vert"></div>-->
+        <a href="#config-lame-large" class="col-3 col-md-5 col-sm-12 m-2  linkclot my-card">
             <div class="h2 productName ">Lame large</div>
             <div class="h4 productPrice mb-2 "><small>A partir de</small> 70.30 €</div>
             <img src="assets/images/cloture-aluminium-lame-large.png"
-                 class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
-            <div class="m-auto btn-moreinfo col-7">
-                <svg class="feather mr-1">
-                    <use xlink:href="assets/images/feather-sprite.svg#file-plus"/>
-                </svg>
-                En savoir plus
+                 class=" w-100 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
+            <div class="columns col-12">
+                <div class="m-auto btn-moreinfo col-auto">
+                    <svg class="feather mr-1">
+                        <use xlink:href="assets/images/feather-sprite.svg#file-plus"/>
+                    </svg>
+                    En savoir plus
+                </div>
             </div>
         </a>
-<!--        <div class="divider-vert"></div>-->
-        <a href="#config-claire-voie" class="col-3 col-md-5 col-sm-12 m-2 p-3 linkclot my-card">
+        <!--        <div class="divider-vert"></div>-->
+        <a href="#config-claire-voie" class="col-3 col-md-5 col-sm-12 m-2  linkclot my-card">
             <div class="h2 productName ">Claire voie</div>
             <div class="h4 productPrice mb-2 "><small>A partir de</small> 55.65 €</div>
             <img src="assets/images/cloture-aluminium-lame-pleine.png"
-                 class=" w-75 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
-            <div class="m-auto btn-moreinfo col-7">
-                <svg class="feather mr-1">
-                    <use xlink:href="assets/images/feather-sprite.svg#file-plus"/>
-                </svg>
-                En savoir plus
+                 class=" w-100 d-block ml-auto mr-auto mt-2 mb-2 pb-2" alt="">
+            <div class="columns col-12">
+                <div class="m-auto btn-moreinfo col-auto">
+                    <svg class="feather mr-1">
+                        <use xlink:href="assets/images/feather-sprite.svg#file-plus"/>
+                    </svg>
+                    En savoir plus
+                </div>
             </div>
         </a>
     </div>
