--- a/assets/views/templates/product.html
+++ b/assets/views/templates/product.html
@@ -10,9 +10,13 @@
                 <div class="h3"><span id="price"></span><small> € TTC </small></div>
                 <div id="qty" class="mb-2 pb-2"><span class="h4">Quantité</span><input class="ml-2" id="qtyInput" type="number" value="1" min="1"></div>
                 <div class="divider mt-2 mb-2 pt-2 pb-2"></div>
-                <div id="options" class="pt-1 pb-1"></div>
+                <div id="options" class="pt-1 pb-1">
+                </div>
                 <div id="l" class="pt-1 pb-1"></div>
-                <div class="btn-moreinfo mt-2 pt-2 col-5 m-auto" id="addCart"><svg class="feather ml-2 mr-1"><use xlink:href="assets/images/feather-sprite.svg#shopping-cart"/></svg> <span class="ml-2 mr-2">Ajouter au panier</span></div>
+                <div class="columns col-12">
+                    <div class="btn-moreinfo mt-2 pt-2 col-auto col-sm-8 m-auto" id="addCart"><svg class="feather ml-2 mr-1"><use xlink:href="assets/images/feather-sprite.svg#shopping-cart"/></svg> <span class="ml-2 mr-2">Ajouter au panier</span></div>
+
+                </div>
             </div>
         </div>
     </div>
