--- a/assets/views/pages/config_persienne.html
+++ b/assets/views/pages/config_persienne.html
@@ -147,7 +147,7 @@
                             <label class="form-radio form-inline column col-6 ">
                                 <div class="columns">
                                     <div class="column col-auto">
-                                        <input type="radio" data-name="ral-7016" data-ref="CFCS" name="couleur"
+                                        <input type="radio" data-name="Gris anthracite" data-ref="CFCS" name="couleur"
                                                value="ral-7016"
                                                data-std="std" checked="checked">
                                         <div class="label-name ral-7016">ral-7016</div>
@@ -159,7 +159,7 @@
                             <label class="form-radio form-inline column col-6 ">
                                 <div class="columns">
                                     <div class="column col-auto">
-                                        <input type="radio" data-name="ral-9010" data-ref="CFCS" name="couleur"
+                                        <input type="radio" data-name="Blanc pur" data-ref="CFCS" name="couleur"
                                                value="ral-9010"
                                                data-std="std">
                                         <div class="label-name ral-9010">ral-9010</div>
@@ -172,7 +172,7 @@
                             <label class="form-radio form-inline column col-6">
                                 <div class="columns">
                                     <div class="column col-auto">
-                                        <input type="radio" data-name="ral-7006" data-ref="CFCS" name="couleur"
+                                        <input type="radio" data-name="Gris beige" data-ref="CFCS" name="couleur"
                                                value="ral-7006"
                                                data-std="std">
                                         <div class="label-name ral-7006">ral-7006</div>
@@ -188,7 +188,7 @@
                             <label class="form-radio form-inline column col-6">
                                 <div class="columns">
                                     <div class="column col-auto">
-                                        <input type="radio" data-name="ral-3004" data-ref="CFCNS" name="couleur"
+                                        <input type="radio" data-name="Rouge pourpre" data-ref="CFCNS" name="couleur"
                                                value="ral-3004"
                                                data-std="nstd">
                                         <div class="label-name ral-3004">ral-3004</div>
@@ -200,7 +200,7 @@
                             <label class="form-radio form-inline column col-6">
                                 <div class="columns">
                                     <div class="column col-auto">
-                                        <input type="radio" data-name="ral-6005" data-ref="CFCNS" name="couleur"
+                                        <input type="radio" data-name="Vert mousse" data-ref="CFCNS" name="couleur"
                                                value="ral-6005"
                                                data-std="nstd">
                                         <div class="label-name ral-6005">ral-6005</div>
@@ -212,7 +212,7 @@
                             <label class="form-radio form-inline column col-6">
                                 <div class="columns">
                                     <div class="column col-auto">
-                                        <input type="radio" data-name="ral-7039" data-ref="CFCNS" name="couleur"
+                                        <input type="radio" data-name="Gris quartz" data-ref="CFCNS" name="couleur"
                                                value="ral-7039"
                                                data-std="nstd">
                                         <div class="label-name ral-7039">ral-7039</div>
@@ -224,7 +224,7 @@
                             <label class="form-radio form-inline column col-6">
                                 <div class="columns">
                                     <div class="column col-auto">
-                                        <input type="radio" data-name="ral-8011" data-ref="CFCNS" name="couleur"
+                                        <input type="radio" data-name="Brun noisette" data-ref="CFCNS" name="couleur"
                                                value="ral-8011"
                                                data-std="nstd">
                                         <div class="label-name ral-8011">ral-8011</div>
@@ -236,7 +236,7 @@
                             <label class="form-radio form-inline column col-6">
                                 <div class="columns">
                                     <div class="column col-auto">
-                                        <input type="radio" data-name="ral-9005" data-ref="CFCNS" name="couleur"
+                                        <input type="radio" data-name="Noir foncé" data-ref="CFCNS" name="couleur"
                                                value="ral-9005"
                                                data-std="nstd">
                                         <div class="label-name ral-9005">ral-9005</div>
@@ -248,7 +248,7 @@
                             <label class="form-radio form-inline column col-6">
                                 <div class="columns">
                                     <div class="column col-auto">
-                                        <input type="radio" data-name="ral-9006" data-ref="CFCNS" name="couleur"
+                                        <input type="radio" data-name="Aluminium blanc" data-ref="CFCNS" name="couleur"
                                                value="ral-9006"
                                                data-std="nstd">
                                         <div class="label-name ral-9006">ral-9006</div>
@@ -260,7 +260,7 @@
                             <label class="form-radio form-inline column col-6">
                                 <div class="columns">
                                     <div class="column col-auto">
-                                        <input type="radio" data-name="ral-2900" data-ref="CFCNS" name="couleur"
+                                        <input type="radio" data-name="Gris 2900 sablé" data-ref="CFCNS" name="couleur"
                                                value="ral-2900"
                                                data-std="nstd">
                                         <div class="label-name ral-2900">ral-2900</div>
@@ -272,7 +272,7 @@
                             <label class="form-radio form-inline column col-6">
                                 <div class="columns">
                                     <div class="column col-auto">
-                                        <input type="radio" data-name="ral-2100" data-ref="CFCNS" name="couleur"
+                                        <input type="radio" data-name="Noir 2100 sablé" data-ref="CFCNS" name="couleur"
                                                value="ral-2100"
                                                data-std="nstd">
                                         <div class="label-name ral-2100">ral-2100</div>
